Actions
Bug #13413
closedsvc.startd: 'contract_list_pool' is multiply-defined
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file deathrow.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file dict.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file env.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file expand.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file file.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file fork.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file graph.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file libscf.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file log.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file method.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file misc.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file protocol.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file restarter.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file specials.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file startd.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file transition.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file wait.o type=OBJT); ld: fatal: symbol 'contract_list_pool' is multiply-defined: (file contract.o type=OBJT; file utmpx.o type=OBJT); ld: fatal: file processing errors. No output written to svc.startd collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `svc.startd' Current working directory /code/illumos-gate/usr/src/cmd/svc/startd
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 16d53a891df2f19b4dc37110081555be4e474d8c
commit 16d53a891df2f19b4dc37110081555be4e474d8c Author: Toomas Soome <tsoome@me.com> Date: 2021-01-11T15:46:24.000Z 13413 svc.startd: 'contract_list_pool' is multiply-defined Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions